[package]
name = "mtc-inc-bpe"
version = "0.9.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Incremental BPE tokenization for all prefixes"
repository = "https://github.com/ModelTC/mtc-inc-bpe"
homepage = "https://github.com/ModelTC/mtc-inc-bpe"
documentation = "https://docs.rs/mtc-inc-bpe"
readme = "README.md"
exclude = ["release-plz.toml", "rustfmt.toml", ".github", "tools"]

[dependencies]
bytes = { version = "1.12.1", default-features = false }
derive_more = { version = "2.1.1", features = ["add", "constructor", "debug", "deref", "display", "from", "into", "into_iterator", "not"] }
rapidhash = { version = "4.5.1", default-features = false, features = ["std"] }
thiserror = { version = "2.0.18", default-features = false }
tinyvec = { version = "1.12.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
rand = "0.10.2"
